# OptiProject

./: README.md  pyproject.toml
configs/: miplib_demo.yml  miplib_demo_ml.yml  sample_experiment.yml  scp_eval_baseline.yml  scp_eval_ml.yml  scp_experiment.yml  simple_experiment.yml
data/instances/: toy_instance.yml
data/microgrid_lp/: day_001.lp  day_002.lp  day_003.lp  day_004.lp  day_005.lp  day_006.lp  day_007.lp  day_008.lp  day_009.lp  day_010.lp  day_011.lp  day_012.lp
data/microgrid_lp_medium/: day_001.lp  day_002.lp  day_003.lp  day_004.lp  day_005.lp  day_006.lp  day_007.lp  day_008.lp  day_009.lp  day_010.lp  day_011.lp  day_012.lp  day_013.lp  day_014.lp  day_015.lp  day_016.lp  day_017.lp  day_018.lp
data/microgrid_lp_simple/: day_001.lp  day_002.lp  day_003.lp  day_004.lp  day_005.lp  day_006.lp
docs/: usage.md
docs/examples/: debug.yml
outputs/models/: cut_model.pkl  node_model.pkl  training_status.json
outputs/results/: scp_eval_comparison.csv  scp_eval_detailed_summary.md  scp_eval_summary.txt  test_baseline.json  test_ml.json  train.json  train.prev.json  train.prev3.json  train_baseline.json  validation.json  validation_baseline.json
outputs/telemetry/: cut_logs.jsonl  node_logs.jsonl  node_logs.prev.jsonl  node_logs.train.jsonl
scripts/: bootstrap_workflow.py  generate_microgrid_instances.py  run_experiment.py  run_pipeline.py  train_models.py
src/learning_branch_cut/: __init__.py
src/learning_branch_cut.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/learning_branch_cut/configs/: base.py
(+11 files in other folders)
